# zephyr-course

./: .gitignore
app/: CMakeLists.txt  Kconfig  Kconfig.heartbeat  app.overlay  board_aliases.cmake
app/boards/: frdm_mcxn947_mcxn947_cpu0.overlay
app/boards/my_board/: Kconfig.defconfig  board.yml  my_board.dtsi  my_board_mcxn947_cpu0.dts  my_board_mcxn947_mcxn947_cpu0.dtsi
app/src/: main.cpp
boards/my_board/: Kconfig  Kconfig.my_board  my_board_mcxn947_cpu0.yaml
boards/our_board/: Kconfig.defconfig  Kconfig.our_board  board.c  board.yaml  board.yml  our_board.dts  our_board_mcxn947_cpu0.dts
